started fixing the horizontal overflow

--- a/src/components/layout/heroSection/index.scss
+++ b/src/components/layout/heroSection/index.scss
@@ -59,7 +59,7 @@
         width: 100%;
       }
       .img {
-        // width: 100%;
+        width: 100%;
         @include tab2{
         }
         img{
