--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,5 +1,5 @@
 @use "../../sass/index" as *;
 #layout{
     z-index: 5;
-    overflow-x: hidden;
+    width: 100%;
 }
