--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
   border: none;
   font-family: $font-family;
   font-size: $font-size;
+  line-height: normal;
 }
 a {
   text-decoration: none;
